[package]
name = "svpassman_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.209", features = ["derive"]}
validator = { version = "0.18.1", features = ["derive"] }
thiserror = { version = "1.0.64"}
